--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -26,7 +26,12 @@
 \end{abstract} 
 
 \section{Introduction}
+
     \input{intro/introduction} 
+
+   \subsection{Technical Overview} \label{sec:tech-overview}
+
+	\input{intro/tech-overview}
 
     \subsection{Discussion}
 
@@ -62,7 +67,7 @@
 	
          \input{intro/chandran}
 
-	\subsection{Hash Functions}
+	\subsection{Hash Functions} \label{sec:hash}
 
 	\input{prelim/hash}
 
