--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -2,11 +2,11 @@ Ring signatures, introduced by Rivest, Shamir and Tauman, \cite{AC:RivShaTau01},
 
 While the more efficient constructions have signature size logarithmic in the size of the ring \cite{EC:GroKoh15,EC:LLNW16}, all of them rely on the {random oracle model}.
 Without random oracles all constructions have signatures of size linear in the size of the ring, being the sole exception the $\Theta(\sqrt{n})$ ring signature of Chandran et al.~\cite{ICALP:ChaGroSah07}. 
-We remark that no asymptotic improvements to Chandran et al.'s construction have been made since their introduction (only improvements in the constants by R\`afols \cite{TCC:Rafols15} and by Gonz\'alez et al.~\cite{AC:GonHevRaf15}). Although some previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, they are either in a weaker security model or we can identify a flaw in the construction (see Section \ref{sec:rs-flawed}). 
+Although some previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, they are either in a weaker security model or we can identify a flaw in the construction (see Section \ref{sec:rs-flawed}). The only (non-asymptotic) improvemets we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
 
 In this work we present the first ring signature (without random oracles) whose signature size is asymptotically smaller than Chandran et al.'s. Our ring signature consists of $\Theta(\sqrt[3]{n})$ group elements, computing a signature requires $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairings.
 
-The security of our construction relies on a security assumption -- the {permutation pairing assumption} -- introduced by Groth and Lu \cite{AC:GroLu07} in an unrelated setting: proofs of correctness of a shuffle. While the assumption is ``non-standard'', in the sense that is not a ``DDH like'' assumption, it is a falsifiable assumption and it was proven hard in generic symmetric groups by Groth and Lu. For simplicity, we work on symmetric groups ($\GG_1=\GG_2$) but our techniques can be easily extended to asymmetric groups as we show in Appendix \ref{sec:aPPA}.
+The security of our construction relies on a security assumption -- the {permutation pairing assumption} -- introduced by Groth and Lu \cite{AC:GroLu07} in an unrelated setting: proofs of correctness of a shuffle. While the assumption is ``non-standard'', in the sense that is not a ``DDH like'' assumption, it is a falsifiable assumption and it was proven hard in generic symmetric groups by Groth and Lu. For easiness of exposition, we work on symmetric groups ($\GG_1=\GG_2$) but our techniques can be easily extended to asymmetric groups as we show in Appendix \ref{sec:aPPA}.
 
 Our ring signature outperforms Chandran et al.'s in terms signature size for any $n > 246$, in terms of signature generation time for any $n>205$, and in terms of verifier efficiency for any $n>170$. However, this analysis should be taken with care, since Chandran et al.'s signature is proven secure under the decisional linear (DLin) assumption while ours is proven secure under the permutation pairing assumption. Therefore, it could be the case that our scheme would be as secure as Chandran et al.'s at higher values of the security parameter. In Table \ref{table:eff} we provide a comparison between our scheme and Chandran et al.'s.
 
